# AED_TP1

./: .gitignore  CMakeLists.txt  README.md
data/DoxygenOutput/html/: _add_request_8h.html  _add_request_8h__dep__incl.dot  _add_request_8h__incl.dot  _add_request_8h_source.html  _class_8h.html  _class_8h__dep__incl.dot  _class_8h__incl.dot  _class_8h_source.html  _menu_8h.html  _menu_8h__incl.dot  _menu_8h_source.html  _oopsie_8h.html  _oopsie_8h__dep__incl.dot  _oopsie_8h__incl.dot  _oopsie_8h_source.html  _remove_request_8h.html  _remove_request_8h__dep__incl.dot  _remove_request_8h__incl.dot  _remove_request_8h_source.html  _request_8h.html  _request_8h__dep__incl.dot  _request_8h__incl.dot  _request_8h_source.html  _schedule_manager_8h.html  _schedule_manager_8h__dep__incl.dot  _schedule_manager_8h__incl.dot  _schedule_manager_8h_source.html  _slot_8h.html  _slot_8h__dep__incl.dot  (+76 more)
data/input/: classes.csv  classes_per_uc.csv  students_classes.csv  students_classes_edited.csv
data/output/: failed_request_log  output_log
docs/: Doxyfile
docs/html/: jquery.js
headers/: AddRequest.h  Class.h  Menu.h  Oopsie.h  RemoveRequest.h  Request.h  ScheduleManager.h  Slot.h  Student.h  SwapRequest.h  SwitchRequest.h  UC.h
html/: md__r_e_a_d_m_e.html  pages.html
html/search/: all_0.js
latex/: md_README.tex  refman.tex
src/: AddRequest.cpp  Class.cpp  Class.h  Menu.cpp  Oopsie.cpp  RemoveRequest.cpp  Request.cpp  Request.h  ScheduleManager.cpp  ScheduleManager.h  Slot.cpp  Slot.h  Student.cpp  Student.h  SwapRequest.cpp  SwitchRequest.cpp  UC.cpp  main.cpp
(+33 files in other folders)
